@@ -1,5 +1,8 @@
 2014-01-27  Jason Merrill  <jason@redhat.com>
 
+	PR c++/58639
+	* call.c (build_aggr_conv): Reject value-initialization of reference.
+
 	PR c++/58812
 	PR c++/58651
 	* call.c (convert_like_real): Give helpful error about excess braces
